# rules_rust_mutants

./: .bazelignore  .bazelrc  .gitignore  404.html  BUILD.bazel  MODULE.bazel  README.md  autoconf.html  autoconf_hdr.html  autoconf_srcs.html  checks.html  defs.bzl  extensions.bzl  gnulib.html  index.html  justfile  migration.html  package_info.html  print.html  repositories.bzl  rules.html  searchindex.js  searchindex.json  toc.html  toc.js  version.bzl
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/: github.bazelrc  release_notes.template
.github/workflows/: ci.yaml  release.yaml
docs/: BUILD.bazel  book.toml
docs/src/: SUMMARY.md  index.md
private/: BUILD.bazel  internal_extensions.bzl  mutation_args_writer.rs  mutation_test.bzl  runner.rs
test/: BUILD.bazel  allow_survivors_support_test.sh  baseline_failure_handling_test.sh  compile_data_support_test.sh  hermetic_env_support_test.sh  lib.rs  mutants_config_forwarding_test.sh  mutation_manifest_support_test.sh  poisoned_cargo_home_support_test.sh  proc_macro_cfg_support_test.sh  runtime_data_support_test.sh  rust_test_wrapped_crate_support_test.sh  rustc_env_files_support_test.sh  rustc_env_support_test.sh  rustc_flags_params_test.sh  survivor_output_test.sh
test/bzl_version/: BUILD.bazel  version_test.rs
test/compile_data/: lib.rs
test/failing_baseline/: lib.rs
test/hermetic_env/: lib.rs
test/multifile/: lib.rs
test/mutants_config/: exclude_all.toml
test/proc_macro_cfg_macro/: lib.rs
test/proc_macro_cfg_user/: lib.rs
test/runtime_data/: lib.rs  message.txt
test/rustc_env/: lib.rs
test/rustc_env_files/: lib.rs  rustc_env_file.env
test/survivor/: lib.rs  untested.rs
