load("@rules_rust//rust:defs.bzl", "rust_clippy", "rust_library", "rust_lint_config", "rust_proc_macro")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//:defs.bzl", "rust_mutation_test")

rust_lint_config(
    name = "mutation_fixture_lints",
    rustc = {"dead_code": "allow"},
)

rust_library(
    name = "example",
    srcs = ["lib.rs"],
    edition = "2021",
    lint_config = ":mutation_fixture_lints",
)

rust_mutation_test(
    name = "example_mutation_test",
    size = "small",
    crate = ":example",
)

rust_library(
    name = "multifile_example",
    srcs = [
        "multifile/lib.rs",
        "multifile/math.rs",
    ],
    edition = "2021",
    lint_config = ":mutation_fixture_lints",
)

rust_mutation_test(
    name = "multifile_example_mutation_test",
    size = "small",
    crate = ":multifile_example",
)

rust_library(
    name = "survivor_example",
    srcs = [
        "survivor/lib.rs",
        "survivor/untested.rs",
    ],
    edition = "2021",
    lint_config = ":mutation_fixture_lints",
)

rust_mutation_test(
    name = "survivor_example_mutation_test",
    size = "small",
    crate = ":survivor_example",
    tags = ["manual"],
)

rust_mutation_test(
    name = "survivor_allow_survivors_example_mutation_test",
    size = "small",
    allow_survivors = True,
    crate = ":survivor_example",
)

rust_library(
    name = "compile_data_example",
    srcs = ["compile_data/lib.rs"],
    compile_data = ["compile_data/message.txt"],
    edition = "2021",
    lint_config = ":mutation_fixture_lints",
)

rust_mutation_test(
    name = "compile_data_example_mutation_test",
    size = "small",
    allow_survivors = True,
    crate = ":compile_data_example",
)

rust_library(
    name = "rustc_env_example",
    srcs = ["rustc_env/lib.rs"],
    edition = "2021",
    lint_config = ":mutation_fixture_lints",
    rustc_env = {"MUTATION_EXPECTED_TOKEN": "ok"},
)

rust_mutation_test(
    name = "rustc_env_example_mutation_test",
    size = "small",
    allow_survivors = True,
    crate = ":rustc_env_example",
)

rust_library(
    name = "rustc_env_files_example",
    srcs = ["rustc_env_files/lib.rs"],
    edition = "2021",
    lint_config = ":mutation_fixture_lints",
    rustc_env_files = ["rustc_env_files/rustc_env_file.env"],
)

rust_mutation_test(
    name = "rustc_env_files_example_mutation_test",
    size = "small",
    allow_survivors = True,
    crate = ":rustc_env_files_example",
)

rust_library(
    name = "hermetic_env_example",
    srcs = ["hermetic_env/lib.rs"],
    edition = "2021",
    lint_config = ":mutation_fixture_lints",
)

rust_mutation_test(
    name = "hermetic_env_example_mutation_test",
    size = "small",
    allow_survivors = True,
    crate = ":hermetic_env_example",
)

rust_library(
    name = "runtime_data_example",
    srcs = ["runtime_data/lib.rs"],
    data = ["runtime_data/message.txt"],
    edition = "2021",
    lint_config = ":mutation_fixture_lints",
)

rust_mutation_test(
    name = "runtime_data_example_mutation_test",
    size = "small",
    allow_survivors = True,
    crate = ":runtime_data_example",
)

rust_proc_macro(
    name = "proc_macro_cfg_macro",
    srcs = ["proc_macro_cfg_macro/lib.rs"],
    edition = "2021",
    lint_config = ":mutation_fixture_lints",
)

rust_library(
    name = "proc_macro_cfg_example",
    srcs = ["proc_macro_cfg_user/lib.rs"],
    edition = "2021",
    lint_config = ":mutation_fixture_lints",
    proc_macro_deps = [":proc_macro_cfg_macro"],
)

rust_mutation_test(
    name = "proc_macro_cfg_disabled_example_mutation_test",
    size = "small",
    allow_survivors = True,
    crate = ":proc_macro_cfg_example",
)

rust_mutation_test(
    name = "proc_macro_cfg_enabled_example_mutation_test",
    size = "small",
    allow_survivors = True,
    crate = ":proc_macro_cfg_example",
    rustc_flags = ["--cfg=mutation_proc_macro_enabled"],
)

rust_mutation_test(
    name = "mutants_config_example_mutation_test",
    size = "small",
    crate = ":example",
    mutants_config = "mutants_config/exclude_all.toml",
    tags = ["manual"],
)

rust_library(
    name = "failing_baseline_example",
    srcs = ["failing_baseline/lib.rs"],
    edition = "2021",
    lint_config = ":mutation_fixture_lints",
)

rust_mutation_test(
    name = "failing_baseline_mutation_test",
    size = "small",
    crate = ":failing_baseline_example",
    tags = ["manual"],
)

sh_test(
    name = "survivor_output_test",
    size = "small",
    srcs = ["survivor_output_test.sh"],
    data = [":survivor_example_mutation_test"],
)

sh_test(
    name = "allow_survivors_support_test",
    size = "small",
    srcs = ["allow_survivors_support_test.sh"],
    data = [":survivor_allow_survivors_example_mutation_test"],
)

sh_test(
    name = "baseline_failure_handling_test",
    size = "small",
    srcs = ["baseline_failure_handling_test.sh"],
    data = [":failing_baseline_mutation_test"],
)

sh_test(
    name = "compile_data_support_test",
    size = "small",
    srcs = ["compile_data_support_test.sh"],
    data = [":compile_data_example_mutation_test"],
)

sh_test(
    name = "rustc_env_support_test",
    size = "small",
    srcs = ["rustc_env_support_test.sh"],
    data = [":rustc_env_example_mutation_test"],
)

sh_test(
    name = "rustc_env_files_support_test",
    size = "small",
    srcs = ["rustc_env_files_support_test.sh"],
    data = [":rustc_env_files_example_mutation_test"],
)

sh_test(
    name = "hermetic_env_support_test",
    size = "small",
    srcs = ["hermetic_env_support_test.sh"],
    data = [":hermetic_env_example_mutation_test"],
)

sh_test(
    name = "runtime_data_support_test",
    size = "small",
    srcs = ["runtime_data_support_test.sh"],
    data = [":runtime_data_example_mutation_test"],
)

sh_test(
    name = "proc_macro_cfg_support_test",
    size = "small",
    srcs = ["proc_macro_cfg_support_test.sh"],
    data = [
        ":proc_macro_cfg_disabled_example_mutation_test",
        ":proc_macro_cfg_enabled_example_mutation_test",
    ],
)

sh_test(
    name = "rustc_flags_params_test",
    size = "small",
    srcs = ["rustc_flags_params_test.sh"],
    data = [
        ":proc_macro_cfg_disabled_example_mutation_test",
        ":proc_macro_cfg_enabled_example_mutation_test",
    ],
)

sh_test(
    name = "mutation_manifest_support_test",
    size = "small",
    srcs = ["mutation_manifest_support_test.sh"],
    data = [
        ":example_mutation_test",
        ":mutants_config_example_mutation_test",
        ":rustc_env_example_mutation_test",
        ":rustc_env_files_example_mutation_test",
    ],
)

sh_test(
    name = "poisoned_cargo_home_support_test",
    size = "small",
    srcs = ["poisoned_cargo_home_support_test.sh"],
    data = [":example_mutation_test"],
)

sh_test(
    name = "mutants_config_forwarding_test",
    size = "small",
    srcs = ["mutants_config_forwarding_test.sh"],
    data = [":mutants_config_example_mutation_test"],
)

rust_clippy(
    name = "clippy",
    testonly = True,
    visibility = ["//:__pkg__"],
    deps = [
        ":compile_data_example",
        ":example",
        ":failing_baseline_example",
        ":hermetic_env_example",
        ":multifile_example",
        ":proc_macro_cfg_example",
        ":proc_macro_cfg_macro",
        ":runtime_data_example",
        ":rustc_env_example",
        ":rustc_env_files_example",
        ":survivor_example",
    ],
)
